Added more to the readme.md to explain the application and started building out the form elements in the html page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Document</title>
+  <title>Programming Language Suggestor</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="jumbotron">
+      <h2>Programming Language Suggestor</h2>
+      <p>Through this web page you can get a relative idea of what kind of peogramming language would best fit your personality.</p>
+    </div>
+    <div class="Radio">
+      <form id="">
+
+      </form>
+    
+  </div>
 </body>
 </html>
