Added in mutiple jpg for logos, uodated html elements with form responses

--- a/index.html
+++ b/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery.js"></script>
-  <script src="js/scripts.js"></script>
+  <link href= "css/bootstrap.css" rel= "stylesheet" type= "text/css">
+  <link href= "css/styles.css" rel= "stylesheet" type= "text/css">
+  <script src= "js/jquery.js"></script>
+  <script src= "js/scripts.js"></script>
   <title>Programming Language Suggestor</title>
 </head>
 <body>
-  <div class="container">
-    <div class="jumbotron">
+  <div class= "container">
+    <div class= "jumbotron">
       <h2>Programming Language Suggestor</h2>
       <p>Through this web page you can get a relative idea of what kind of peogramming language would best fit your personality.</p>
     </div>
-    <div class="Radio">
+    <div class= "Radio">
       <form id="">
 
       </form>
-    
+    <div class= "programLang1">
+      <img src= "img/GO.png" alt="Logo for the GO programming language" class="classlanguage">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class= "programLang2">
+      <img src= "img/JavaS.jpg" alt="Logo for the JavaScript programming language." class="classlanguage">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class= "programLang3">
+      <img src= "jpg/python.jpg" alt="Logo for the Python programming language" class="classlanguage">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class= "programLang4">
+      <img src= "jpg/ruby.jpg" alt="Logo for the ruby programming language" class="classlanguage">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class= "programLang5">
+      <img src= "jpg/rust.jpg" alt= "Logo for the rust programming language" class="classlanguage">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+    <div class="programLang6">
+      <img src="jpg/swift.jpg" alt="Logo for the swift programming language" class="classlanguage">
+
+    </div>
   </div>
 </body>
 </html>
