--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
   <div class= "container">
     <div class= "jumbotron">
+      <img src="jpg/PGL.jpg" alt="a grouping of programming languages" class="center">
       <h2>Programming Language Suggestor</h2>
       <p>Through this web page you can get a relative idea of what kind of peogramming language would best fit your personality.</p>
     </div>
     <div class= "Radio">
       <form id="">
 
+        <button type= "submit" class= "btn btn-primary">Submit</button>
       </form>
     <div class= "programLang1">
       <img src= "img/GO.png" alt="Logo for the GO programming language" class="classlanguage">
@@ -39,7 +41,7 @@
     </div>
     <div class="programLang6">
       <img src="jpg/swift.jpg" alt="Logo for the swift programming language" class="classlanguage">
-
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
   </div>
 </body>
