--- a/index.html
+++ b/index.html
@@ -12,11 +12,46 @@
     <div class= "jumbotron">
       <img src="jpg/PGL.jpg" alt="a grouping of programming languages" class="center">
       <h2>Programming Language Suggestor</h2>
-      <p>Through this web page you can get a relative idea of what kind of peogramming language would best fit your personality.</p>
+      <p class="titleintro">Through this web page you can get a relative idea of what kind of peogramming language would best fit your personality.</p>
     </div>
-    <div class= "Radio">
-      <form id="">
-
+    <div class= "Formbox">
+      <form id="ProgramPerson">
+        <h4>Input your name.</h4>
+        <input type="userName">
+        <h4></h4>
+        <h4>What would you do if the fridge started talking to you?</h4>
+        <div class="radio">
+          <label>
+            <input type="radio" name="fridgeIssue" value="0">
+            Scream a run away!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="fridgeIssue" value="1">
+            Pull out a hammer and start hammering!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="fridgeIssue" value="2">
+            Pull out phone and video record!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="fridgeIssue" value="3">
+            Strike up a conversation!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="fridgeIssue" value="4">
+            Act like nothing is happening!
+          </label>
+        </div>
+        <br>
+        <br>
         <button type= "submit" class= "btn btn-primary">Submit</button>
       </form>
     <div class= "programLang1">
