--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div class= "jumbotron">
       <img src="jpg/PGL.jpg" alt="a grouping of programming languages" class="center">
       <h2>Programming Language Suggestor</h2>
-      <p class="titleintro">Through this web page you can get a relative idea of what kind of peogramming language would best fit your personality.</p>
+      <p class="titleintro">Through this web page you can get a relative idea of what kind of programming language would best fit your personality.</p>
     </div>
     <div class= "Formbox">
       <form id="ProgramPerson">
         <h4>Input your name.</h4>
-        <input type="userName">
+        <input id="userName">
         <h4></h4>
+
         <h4>What would you do if the fridge started talking to you?</h4>
         <div class="radio">
           <label>
@@ -41,42 +42,108 @@
         <div class="radio">
           <label>
             <input type="radio" name="fridgeIssue" value="3">
-            Strike up a conversation!
+            Strike up a conversation.
           </label>
         </div>
         <div class="radio">
           <label>
             <input type="radio" name="fridgeIssue" value="4">
-            Act like nothing is happening!
+            Act like nothing is happening.
+          </label>
+        </div>
+        <br>
+        <h4>Do aliens exist?</h4>
+        <div class="radio">
+          <label>
+            <input type="radio" name="alienProb" value="0">
+            You are crazy!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="alienProb" value="1">
+            I believe the truth is out there!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="alienProb" value="2">
+            My professor told me it was proven through the Drake equation.
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="alienProb" value="3">
+            Why would you ask this.
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="alienProb" value="4">
+            Never have and never will.
+          </label>
+        </div>
+        <br>
+        <h4>Whats your favorite planet?</h4>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="0">
+            Murcery!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="1">
+            Venus!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="2">
+            Earth duhh!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="3">
+            Mars because its the best!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="4">
+            Saturn!
           </label>
         </div>
         <br>
         <br>
         <button type= "submit" class= "btn btn-primary">Submit</button>
       </form>
+      <br>
+      <br>
     <div class= "programLang1">
-      <img src= "img/GO.png" alt="Logo for the GO programming language" class="classlanguage">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <img class="resultImag" src= "img/GO.jpg" alt="Logo for the GO programming language" class="classlanguage">
+      <p>Congrats <span id=userNameValue></span>, You would be a great fit for GO! Go is a statically typed, compiled programming language designed at Google by Robert Griesemer, Rob Pike, and Ken Thompson. Go is syntactically similar to C, but with memory safety, garbage collection, structural typing, and CSP-style concurrency.</p>
     </div>
     <div class= "programLang2">
-      <img src= "img/JavaS.jpg" alt="Logo for the JavaScript programming language." class="classlanguage">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <img class="resultImag" src= "img/JavaS.jpg" alt="Logo for the JavaScript programming language." class="classlanguage">
+      <p>Congrats <span id=userNameValue></span>, You would be a great fit for JavaScript! is a programming language that conforms to the ECMAScript specification. JavaScript is high-level, often just-in-time compiled, and multi-paradigm.</p>
     </div>
     <div class= "programLang3">
-      <img src= "jpg/python.jpg" alt="Logo for the Python programming language" class="classlanguage">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <img class="resultImag" src= "jpg/python.jpg" alt="Logo for the Python programming language" class="classlanguage">
+      <p>Congrats <span id=userNameValue></span>, You would be a great fit for Python! Python is an interpreted, high-level, general-purpose programming language.</p>
     </div>
     <div class= "programLang4">
-      <img src= "jpg/ruby.jpg" alt="Logo for the ruby programming language" class="classlanguage">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <img class="resultImag" src= "jpg/ruby.jpg" alt="Logo for the ruby programming language" class="classlanguage">
+      <p>Congrats <span id=userNameValue></span>, You would be a great fit for Ruby! Ruby is an interpreted, high-level, general-purpose programming language</p>
     </div>
     <div class= "programLang5">
-      <img src= "jpg/rust.jpg" alt= "Logo for the rust programming language" class="classlanguage">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <img class="resultImag" src= "jpg/rust.jpg" alt= "Logo for the rust programming language" class="classlanguage">
+      <p>Congrats <span id=userNameValue></span>, You would be a great fit for Rust! Rust is a multi-paradigm programming language focused on performance and safety, especially safe concurrency.</p>
     </div>
     <div class="programLang6">
-      <img src="jpg/swift.jpg" alt="Logo for the swift programming language" class="classlanguage">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <img class="resultImag" src="jpg/swift.jpg" alt="Logo for the swift programming language" class="classlanguage">
+      <p>Congrats <span id=userNameValue></span>, You would be a great fit for Swift! Swift is a general-purpose, multi-paradigm, compiled programming language developed by Apple Inc.</p>
     </div>
   </div>
 </body>
