worked on javascript structure, formated styles.css to correct the imag issue with results, addeed another question in html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p class="titleintro">Through this web page you can get a relative idea of what kind of programming language would best fit your personality.</p>
     </div>
     <div class= "Formbox">
-      <form id="ProgramPerson">
+      <form id="programPerson">
         <h4>Input your name.</h4>
         <input id="userName">
         <h4></h4>
@@ -113,6 +113,38 @@
           <label>
             <input type="radio" name="planetProb" value="4">
             Saturn!
+          </label>
+        </div>
+        <br>
+        <h4>Why did the chicken cross the road?</h4>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="0">
+            To lay an egg!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="1">
+            check out the other farm across the road!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="2">
+            Because its a chicken!
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="3">
+            Why do you care?
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="planetProb" value="4">
+            To meet up with other chickens!
           </label>
         </div>
         <br>
