added in global constance and fiddled with styles.css border style on the form

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h2>Programming Language Suggestor</h2>
       <p class="titleintro">Through this web page you can get a relative idea of what kind of programming language would best fit your personality.</p>
     </div>
-    <div class= "Formbox">
+    <div class= "formbox">
       <form id="programPerson">
-        <h4>Input your name.</h4>
+        <h4>To start, put in your name.</h4>
         <input id="userName">
         <h4></h4>
 
