worked on Debugging the Javascript to have the user input show up in the result & also Debuggin the buttons not restarting after pressed.

--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
       <br>
       <br>
     <div id= "programLang1">
-      <img class="resultImag" src= "img/GO.jpg" alt="Logo for the GO programming language" class="classlanguage">
+      <img class="resultImag" src= "jpg/Go.jpg" alt="Logo for the GO programming language" class="classlanguage">
       <p class="finishingText">Congrats <span id=userNameValue></span>, You would be a great fit for GO! Go is a statically typed, compiled programming language designed at Google by Robert Griesemer, Rob Pike, and Ken Thompson. Go is syntactically similar to C, but with memory safety, garbage collection, structural typing, and CSP-style concurrency.</p>
     </div>
     <div id= "programLang2">
-      <img class="resultImag" src= "img/JavaS.jpg" alt="Logo for the JavaScript programming language." class="classlanguage">
+      <img class="resultImag" src= "jpg/javaS.jpg" alt="Logo for the JavaScript programming language." class="classlanguage">
       <p class="finishingText">Congrats <span id=userNameValue></span>, You would be a great fit for JavaScript! is a programming language that conforms to the ECMAScript specification. JavaScript is high-level, often just-in-time compiled, and multi-paradigm.</p>
     </div>
     <div id= "programLang3">
