Debugged the html and JS issues

--- a/index.html
+++ b/index.html
@@ -18,36 +18,30 @@
       <form id="programPerson">
         <h4>To start, put in your name.</h4>
         <input id="userName">
-        <h4></h4>
-
         <h4>What would you do if the fridge started talking to you?</h4>
         <div class="radio">
           <label>
-            <input type="radio" class="fridgeIssue" value="0">
+            <input type="radio" class="fridgeIssue" value="0" name="fridgeStuff">
             Scream a run away!
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="fridgeIssue" value="1">
+            <input type="radio" class="fridgeIssue" value="1" name="fridgeStuff">
             Pull out a hammer and start hammering!
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="fridgeIssue" value="2">
+            <input type="radio" class="fridgeIssue" value="2" name="fridgeStuff">
             Pull out phone and video record!
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="fridgeIssue" value="3">
+            <input type="radio" class="fridgeIssue" value="3" name="fridgeStuff">
             Strike up a conversation.
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="fridgeIssue" value="4">
+            <input type="radio" class="fridgeIssue" value="4" name="fridgeStuff">
             Act like nothing is happening.
           </label>
         </div>
@@ -55,95 +49,83 @@
         <h4>Do aliens exist?</h4>
         <div class="radio">
           <label>
-            <input type="radio" class="alienProb" value="0">
+          <input type="radio" class="alienProb" value="0" name="aliendue">
             You are crazy!
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="alienProb" value="1">
+          <input type="radio" class="alienProb" value="1" name="aliendue">
             I believe the truth is out there!
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="alienProb" value="2">
+            <input type="radio" class="alienProb" value="2" name="aliendue">
             My professor told me it was proven through the Drake equation.
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="alienProb" value="3">
+            <input type="radio" class="alienProb" value="3" name="aliendue">
             Why would you ask this.
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="alienProb" value="4">
+            <input type="radio" class="alienProb" value="4" name="aliendue">
             Never have and never will.
           </label>
         </div>
         <br>
         <h4>Whats your favorite planet?</h4>
-        <div class="radio">
-          <label>
-            <input type="radio" class="planetProb" value="0">
-            Murcery!
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" class="planetProb" value="1">
-            Venus!
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" class="planetProb" value="2">
-            Earth duhh!
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" class="planetProb" value="3">
-            Mars because its the best!
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" class="planetProb" value="4">
-            Saturn!
-          </label>
-        </div>
+          <div class="radio">
+            <label>
+              <input type="radio" class="planetProb" value="0" name="favPlanet">
+              Murcery!
+            </label>
+            <br>
+            <label>
+              <input type="radio" class="planetProb" value="1" name="favPlanet">
+              Venus!
+            </label>
+            <br>
+            <label>
+              <input type="radio" class="planetProb" value="2" name="favPlanet">
+              Earth duhh!
+            </label>
+            <br>
+            <label>
+              <input type="radio" class="planetProb" value="3" name="favPlanet">
+              Mars because its the best!
+            </label>
+            <br>
+            <label>
+              <input type="radio" class="planetProb" value="4" name="favPlanet">
+              Saturn!
+            </label>
+          </div>
         <br>
         <h4>Why did the chicken cross the road?</h4>
         <div class="radio">
           <label>
-            <input type="radio" class="chickenProb" value="0">
+            <input type="radio" class="chickenProb" value="0" name="ChickenRoad">
             To lay an egg!
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="chickenProb" value="1">
+            <input type="radio" class="chickenProb" value="1" name="ChickenRoad">
             check out the other farm across the road!
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="chickenProb" value="2">
+            <input type="radio" class="chickenProb" value="2" name="ChickenRoad">
             Because its a chicken!
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="chickenProb" value="3">
+            <input type="radio" class="chickenProb" value="3" name="ChickenRoad">
             Why do you care?
           </label>
-        </div>
-        <div class="radio">
+          <br>
           <label>
-            <input type="radio" class="chickenProb" value="4">
+            <input type="radio" class="chickenProb" value="4" name="ChickenRoad">
             To meet up with another chicken!
           </label>
         </div>
@@ -155,27 +137,27 @@
       <br>
     <div id= "programLang1">
       <img class="resultImag" src= "jpg/Go.jpg" alt="Logo for the GO programming language" class="classlanguage">
-      <p class="finishingText">Congrats <span id=userNameValue></span>, You would be a great fit for GO! Go is a statically typed, compiled programming language designed at Google by Robert Griesemer, Rob Pike, and Ken Thompson. Go is syntactically similar to C, but with memory safety, garbage collection, structural typing, and CSP-style concurrency.</p>
+      <p class="finishingText">Congrats <span class=userNameValue></span>, You would be a great fit for GO! Go is a statically typed, compiled programming language designed at Google by Robert Griesemer, Rob Pike, and Ken Thompson. Go is syntactically similar to C, but with memory safety, garbage collection, structural typing, and CSP-style concurrency.</p>
     </div>
     <div id= "programLang2">
       <img class="resultImag" src= "jpg/javaS.jpg" alt="Logo for the JavaScript programming language." class="classlanguage">
-      <p class="finishingText">Congrats <span id=userNameValue></span>, You would be a great fit for JavaScript! is a programming language that conforms to the ECMAScript specification. JavaScript is high-level, often just-in-time compiled, and multi-paradigm.</p>
+      <p class="finishingText">Congrats <span class="userNameValue"></span>, You would be a great fit for JavaScript! is a programming language that conforms to the ECMAScript specification. JavaScript is high-level, often just-in-time compiled, and multi-paradigm.</p>
     </div>
     <div id= "programLang3">
       <img class="resultImag" src= "jpg/python.jpg" alt="Logo for the Python programming language" class="classlanguage">
-      <p class="finishingText">Congrats <span id=userNameValue></span>, You would be a great fit for Python! Python is an interpreted, high-level, general-purpose programming language.</p>
+      <p class="finishingText">Congrats <span class="userNameValue"></span>, You would be a great fit for Python! Python is an interpreted, high-level, general-purpose programming language.</p>
     </div>
     <div id= "programLang4">
       <img class="resultImag" src= "jpg/ruby.jpg" alt="Logo for the ruby programming language" class="classlanguage">
-      <p class="finishingText">Congrats <span id=userNameValue></span>, You would be a great fit for Ruby! Ruby is an interpreted, high-level, general-purpose programming language</p>
+      <p class="finishingText">Congrats <span class="userNameValue"></span>, You would be a great fit for Ruby! Ruby is an interpreted, high-level, general-purpose programming language</p>
     </div>
     <div id= "programLang5">
       <img class="resultImag" src= "jpg/rust.jpg" alt= "Logo for the rust programming language" class="classlanguage">
-      <p class="finishingText">Congrats <span id=userNameValue></span>, You would be a great fit for Rust! Rust is a multi-paradigm programming language focused on performance and safety, especially safe concurrency.</p>
+      <p class="finishingText">Congrats <span class="userNameValue"></span>, You would be a great fit for Rust! Rust is a multi-paradigm programming language focused on performance and safety, especially safe concurrency.</p>
     </div>
     <div id="programLang6">
       <img class="resultImag" src="jpg/swift.jpg" alt="Logo for the swift programming language" class="classlanguage">
-      <p class="finishingText">Congrats <span id=userNameValue></span>, You would be a great fit for Swift! Swift is a general-purpose, multi-paradigm, compiled programming language developed by Apple Inc.</p>
+      <p class="finishingText">Congrats <span class="userNameValue"></span>, You would be a great fit for Swift! Swift is a general-purpose, multi-paradigm, compiled programming language developed by Apple Inc.</p>
     </div>
   </div>
 </body>
